--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,3 +29,26 @@ spring:
             client-secret: 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
             scope: email,profile
 
+          kakao:
+            client-id: b221dd8bfb98b9c63a6c1cfe7fdd41f0
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:8999/login/oauth2/code/kakao
+
+          naver:
+            client-id: _IhF42SeXiUu06U3VVzb
+            client-secret: kYnCF89JRG
+            redirect-uri: http://localhost:8999/login/oauth2/code/naver
+            authorization-grant-type: authorization_code
+
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
